--- a/Exam2 Bayramov Kemal/index.html
+++ b/Exam2 Bayramov Kemal/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css.map">
     <link rel="stylesheet" href="css/splide.min.css">
     <link rel="stylesheet" href="fancybox/fancybox.css">
     <link rel="stylesheet" href="css/style.css">
@@ -24,7 +23,7 @@
                         Meet the latest of the Galaxy family 
                     </div>
                     <div class="pt-3">
-                        <button class="btn2 pt-2 pb-2 text-white fw-bold">BUY NOW</button>
+                        <button class="rounded-5 p-2 px-5 bg-color-violet text-white border-white ">BUY NOW</button>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 text-md-center">
@@ -90,7 +89,7 @@
                                         The Galaxy Note9 is packed with featurs to up yout photo  game and connect you more deeply with the things that are important to you. See how it's redefining the smartphone. Meet the latest member of the Galaxy family
                                         </div>  
                                         <div class="h5">
-                                            <button class="bg-black text-white btn2 fw-bold pt-2 pb-2">LEARN MORE</button>
+                                            <button class="rounded-5 p-2 px-4 border-white bg-black text-white">LEARN MORE</button>
                                         </div>                                     
                                     </div>
                                 </div>
@@ -127,7 +126,7 @@
                             <div class="text-white pt-3">
                                 The galaxy Tab S4 gives you a stunningly brilliant screen, a <br> PC experiance in a tablet and more.
                                 <div class="pt-2">
-                                    <button class="btn3 py-2 fw-bold text-white">BUY NOW</button>
+                                    <button class="rounded-5 p-2 px-5 bg-color-violet2 text-white border-white">BUY NOW</button>
                                 </div> 
                             </div>
                         </div>
@@ -153,7 +152,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-lg-6 px-5 pt-5">
-                            <button class="bg-white text-black btn4 pt-2 pb-2">LEARN MORE</button>
+                            <button class="rounded-5 p-2 px-4 bg-white">LEARN MORE</button>
                         </div>
                         <div class="col-12 col-lg-6">
                             <div class="fw-bold h1 pt-5">
